--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,8 @@
-<% provide(:title, "Help") %>
-<h1>Help</h1>
-<p>  Get help on the Ruby on Rails Tutorial at the
-  <a href="https://railstutorial.jp/help">Rails Tutorial help section</a>.
-  To get help on this sample app, see the
-  <a href="https://railstutorial.jp/#ebook"><em>Ruby on Rails Tutorial</em>
-  book</a>.
+<% provide(:title, "How to Use") %>
+<h1>How to Use</h1>
+<p> Please login as Example User.
+  <ul>
+    <li>email: "example@railstutorial.org"</li>
+    <li>password: "password"</li>
+  </ul>
 </p>
