resolve not sending email

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
-  <a href="https://railstutorial.jp/contact">contact page</a>.
+  If you have a question about this application, please send a email to "eziputo3280@gmail.com".
 </p>
