--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,11 @@
 <% provide(:title, "How to Use") %>
 <h1>How to Use</h1>
-<p> Please login as Example User.
-  <ul>
-    <li>email: "example@railstutorial.org"</li>
-    <li>password: "password"</li>
-  </ul>
+<p>
+  This is the sample application created by YUYA TANAKA using ruby on rails.
+  If you want to login without signup, please login as Example User below.
+    <ul>
+      <li>name: "Example User"</li>
+      <li> email: "example@railstutorial.org"</li>
+      <li>password: "password"</li>
+    </ul>
 </p>
